--- a/book/templates/book/completed_book.html
+++ b/book/templates/book/completed_book.html
@@ -1,8 +1,13 @@
 {% extends "base.html" %} {% load static %} {% block content %}
 
-<header class="d-flex justify-content-center">
-    <h2>Your book has been published!</h2>
-</header>
+{% if messages %}
+    {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}">
+            {{ message }}
+        </div>
+    {% endfor %}
+{% endif %}
+
 <br>
 <div class="container d-flex justify-content-center">
     <div class="card" style="width: 30rem;">
