--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -7,97 +7,89 @@
     {% for message in messages %}
         <div class="alert alert-{{ message.tags }}">
             {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
         </div>
     {% endfor %}
   {% endif %}
   <br>
-  <h4 class="text-center">From Thoughts to Pages - Inkpad is Your Space</h4>
-  <br>
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="..." class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </button>
-  </div>
-  <div class="row text-center">
-    <h4>Lets get you started then shall we?</h4>
+  <section class="homepage-container">
+    <div class="banner-card">
+      <img src="static/images/book_side.jpg" alt="Partial view of book covers">
+      <div class="banner-text">
+        <h3>From thoughts to pages - Inkpad is your space</h3>
+        <p>Lets get you started then shall we?</p>
             {% if user.is_authenticated %}
               <button type="button" class="btn btn-light"><a href="{% url 'browse' %}">Browse books</a></button>
               <button type="button" class="btn btn-light"><a href="{% url 'book_details' %}">Create a book</a></button>
             {% else %}
               <button><a href="{% url 'account_signup' %}">Log in </a></button>
             {% endif %}
-  </div>
+      </div>
+    </div>
+  </section>
 
-        <br>
-  <div class="card text-center">
-    <div class="card-header --bs-warning-bg-subtle">
-      <h2>Fun Quotes</h2>
-    </div>
-    <div class="card-body" id="funFacts">
-      <blockquote class="blockquote mb-0">
-        {% for q in quotations %}
-        <p>{{ q.quote }}</p>
-        <footer class="blockquote-footer"><cite title="Source Title">{{ q.quote_author }}</cite></footer>
-        <hr>
-        {% endfor %}
-      </blockquote>
+  <br>
+  <div class="row">
+    <div class="card text-center">
+      <div class="card-header --bs-warning-bg-subtle">
+        <h2>Quotes</h2>
+      </div>
+      <div class="card-body" id="funFacts">
+        <blockquote class="blockquote mb-0">
+          {% for q in quotations %}
+          <p>{{ q.quote }}</p>
+          <footer class="blockquote-footer"><cite title="Source Title">{{ q.quote_author }}</cite></footer>
+          <hr>
+          {% endfor %}
+        </blockquote>
+      </div>
     </div>
   </div>
+  
   <br>
 
   <section>
-    <h2>About us</h2>
-    <div class="row">
-      <div class="col-sm-6">
-        <div class="card h-100">
-          <div class="card-body">
-            <h5 class="card-title">Whats the purpose?</h5>
-            <p class="card-text">We are Inkpad, an online website for upcoming authors. We give unpublished
-              and even published authors the oppurtunity to show the world whats in their
-              mind. We allow people to express themself with no limits (shout out to the ones
-              who write freaky books). But it's not just for those who wants to write,
-              Inkpad is for those who love to read.</p>
-          </div>
-        </div>
+    <div class="card">
+      <div class="card-header --bs-warning-bg-subtle">
+        <h2 class="text-center">About us</h2>
       </div>
-      <div class="col-sm-6">
-        <div class="card h-100">
-          <div class="card-body">
-            <h5 class="card-title">Why make the website?</h5>
-            <p class="card-text">
-              I'm gald you asked. Wattpad is no longer free, and since it's not I'm making my own version!
-            </p>
-            <p class="card-text">
-              On a more serious note... When I was younger I used to read Wattpad until 3/4am because I could never
-              afford to actually buy books (perks of being 13 with no job). So to see that
-              they are charging, upsets me because my love for books started with Wattpad.
-              So to charge for it stops the next generation having that same love.
-            </p>
+      <div class="card-body">
+        <div class="row">
+          <div class="col-sm-6">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Whats the purpose?</h5>
+                <p class="card-text">We are Inkpad, an online website for upcoming authors. We give unpublished
+                  and even published authors the oppurtunity to show the world whats in their
+                  mind. We allow people to express themself with no limits (shout out to the ones
+                  who write freaky books). But it's not just for those who wants to write,
+                  Inkpad is for those who love to read.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Why make the website?</h5>
+                <p class="card-text">
+                  I'm gald you asked. Wattpad is no longer free, and since it's not I'm making my own version!
+                </p>
+                <p class="card-text">
+                  On a more serious note... When I was younger I used to read Wattpad until 3/4am because I could never
+                  afford to actually buy books (perks of being 13 with no job). So to see that
+                  they are charging, upsets me because my love for books started with Wattpad.
+                  So to charge for it stops the next generation having that same love.
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
+    
+    
   </section>
 
   
