--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,8 +4,35 @@ a {
     color: #484747;
 }
 
+/* ------- Base.html --------- */
+
+
+html, body {
+    height: 100%;
+    margin: 0;
+}
+/* All of the content wrapper */
+.body-wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+/* Content on other html */
+.content-wrapper {
+    flex: 1;
+    /* Add padding or margin as needed */
+}
+
+/* Footer */
+footer {
+    width: 100%;
+    height: auto;
+}
+
+
 /* --------- Index --------- */
 
+/* Image */
 .homepage-container{
     height: auto;
     max-width: 100%;
@@ -37,3 +64,5 @@ a {
 .banner-text p {
     font-size: 20px;
 }
+
+
