--- a/templates/base.html
+++ b/templates/base.html
@@ -23,9 +23,8 @@
 </head>
 
 <body>
-
-  
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="body-wrapper">
+      <nav class="navbar navbar-expand-lg" style="background-color: #f1e7c1ea;">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Inkpad</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -81,7 +80,7 @@
 
 
 
-      <main class="flex-shrink-0 main-bg">
+      <main class="content-wrapper">
         {% block content %}
         <!-- Content Goes here -->
         {% endblock content %}
@@ -89,33 +88,30 @@
 
 
       <!-- Footer -->
-      <footer class="text-center bg-body-tertiary">
+      <footer class="text-center" style="background-color: #f1e7c1ea;">
         <!-- Grid container -->
         <div class="container pt-4">
           <!-- Section: Social media -->
           <section class="mb-4">
             <!-- Facebook -->
-            <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1" href="#!" role="button"
-              data-mdb-ripple-color="dark"><i class="fab fa-facebook-f"></i></a>
+            <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1" href="https://www.facebook.com/" role="button"
+              data-mdb-ripple-color="dark" target="_blank"><i class="fab fa-facebook-f"></i></a>
 
             <!-- Twitter -->
-            <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1" href="#!" role="button"
-              data-mdb-ripple-color="dark"><i class="fab fa-twitter"></i></a>
+            <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1" href="https://www.twitter.com/" role="button"
+              data-mdb-ripple-color="dark" target="_blank"><i class="fab fa-twitter"></i></a>
 
-            <!-- Google -->
-            <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1" href="#!" role="button"
-              data-mdb-ripple-color="dark"><i class="fab fa-google"></i></a>
+            <!-- TikTok -->
+            <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1" href="https://www.tiktok.com/" role="button"
+              data-mdb-ripple-color="dark" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
 
             <!-- Instagram -->
-            <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1" href="#!" role="button"
-              data-mdb-ripple-color="dark"><i class="fab fa-instagram"></i></a>
+            <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1" href="https://www.Instagram.com/" role="button"
+              data-mdb-ripple-color="dark" target="_blank"><i class="fab fa-instagram"></i></a>
 
-            <!-- Linkedin -->
-            <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1" href="#!" role="button"
-              data-mdb-ripple-color="dark"><i class="fab fa-linkedin"></i></a>
-            <!-- Github -->
-            <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1" href="#!" role="button"
-              data-mdb-ripple-color="dark"><i class="fab fa-github"></i></a>
+            <!-- Pinterest -->
+            <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1" href="https://www.pinterest.com/" role="button"
+              data-mdb-ripple-color="dark" target="_blank"><i class="fa-brands fa-pinterest"></i></a>
           </section>
           <!-- Section: Social media -->
         </div>
@@ -138,6 +134,7 @@
       <!-- Font Awesome CSS -->
       <script src="https://kit.fontawesome.com/d5e5e3db0c.js" crossorigin="anonymous"></script>
       {% block extras %} {% endblock %}
+    </div>
 </body>
 
 </html>
