--- a/browse/templates/browse/browse.html
+++ b/browse/templates/browse/browse.html
@@ -18,18 +18,18 @@
         <div class="col-sm-4 mb-3 text-center">
             <div class="card h-100">
                 <div class="card-body">
-                    <img src="{{ book.image.url }}" alt="{{ book.title }}" class="card-img-top">
+                    <img src="{{ book.image.url }}" alt="{{ book.title }}" class="card-img-top" id="img-size">
                     <h5 class="card-title">{{ book.title | safe }}</h5>
                     <p class="card-text">{{ book.excerpt | safe }}</p>
-                    <a href="{% url 'book_view' book.slug %}" class="btn btn-primary">View book</a>
+                    <a href="{% url 'book_view' book.slug %}" class="btn btn-secondary">View book</a>
                     {% if user.is_authenticated %}
-                        <a href="#" class="btn btn-primary">Read now</a>
+                        <a href="#" class="btn btn-secondary">Read now</a>
                         <form action="{% url 'bookmark_book' slug=book.slug %}" method="POST">
                             {% csrf_token %}
                             {% if book.id in bookmarked_book_ids %}
-                                <button type="submit" name="book_id" value="{{ book.id }}" class="btn btn-danger">UnBookmark</button>
+                                <button type="submit" name="book_id" value="{{ book.id }}" class="bookmark" ><i class="fa-solid fa-bookmark fa-1x"></i></button>
                             {% else %}
-                                <button type="submit" name="book_id" value="{{ book.id }}" class="btn btn-primary">Bookmark</button>
+                                <button type="submit" name="book_id" value="{{ book.id }}" class="bookmark"><i class="fa-regular fa-bookmark fa-1x"></i></button>
                             {% endif %}
                         </form>
                     {% endif %}
@@ -45,18 +45,21 @@
 
 
   <nav aria-label="Page navigation">
-    <ul class="pagination">
+    <ul class="d-flex pagination justify-content-center">
       <li class="page-item">
         {% if page_obj.has_previous %}
-          <a href="?page={{ page_obj.previous_page_number }}" class="page-link" aria-label="Prev">&laquo; Prev </a>
+          <a href="?page={{ page_obj.previous_page_number }}" class="page-link" aria-label="Prev">&laquo;</a>
       {% endif %}
       </li>
       <span class="current">
-        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        <li class="page-item"></li>
+        <li class="page-item"><a class="page-link" href="#">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.</a></li>
+        
+        
     </span>
       <li class="page-item">
         {% if page_obj.has_next %}
-          <a href="?page={{ page_obj.next_page_number }}" class="page-link" aria-label="Next">next &raquo;</a>
+          <a href="?page={{ page_obj.next_page_number }}" class="page-link" aria-label="Next">&raquo;</a>
       {% endif %}
     
       </li>
