--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,3 +66,23 @@ footer {
 }
 
 
+/* ------ Browse */
+
+/* Bookmark button */
+
+.bookmark {
+    background-color: transparent;
+    background-repeat: no-repeat;
+    border: none;
+    cursor: pointer;
+    overflow: hidden;
+}
+
+
+/* image card sizes */
+
+#img-size {
+    width: 100%;
+    height: 32vw;
+    object-fit: cover;
+}
