--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,6 +11,7 @@ html, body {
     height: 100%;
     margin: 0;
 }
+
 /* All of the content wrapper */
 .body-wrapper {
     display: flex;
@@ -85,4 +86,8 @@ footer {
     width: 100%;
     height: 32vw;
     object-fit: cover;
+}
+
+.card  {
+    margin: 15px;
 }
