--- a/book/templates/book/completed_book.html
+++ b/book/templates/book/completed_book.html
@@ -4,6 +4,9 @@
     {% for message in messages %}
         <div class="alert alert-{{ message.tags }}">
             {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
         </div>
     {% endfor %}
 {% endif %}
@@ -16,9 +19,9 @@
           <h3 class="card-title">{{ books.title | safe }}</h3>
             <p class="card-text">{{ books.excerpt | safe }}</p>
             <p class="card-text">{{ books.synopsis | safe }}</p>
-            <button><a href="{% url 'add_chapter' book_slug=books.slug %}">Add a chapter</a></button>
-            <button><a href="{% url 'edit_book' slug=books.slug pk=books.pk %}">Edit book details</a></button>
-            <button><a href="{% url 'delete_book' slug=books.slug %}">Delete book</a></button>
+            <a href="{% url 'add_chapter' book_slug=books.slug %}" class="btn btn-secondary">Add a chapter</a>
+            <a href="{% url 'edit_book' slug=books.slug pk=books.pk %}" class="btn btn-secondary">Edit book details</a>
+            <a href="{% url 'delete_book' slug=books.slug %}" class="btn btn-secondary">Delete book</a>
         </div>
       </div>
 </div>
