Add class to center button

--- a/book/templates/book/add_chapter.html
+++ b/book/templates/book/add_chapter.html
@@ -11,9 +11,12 @@
         <div class="form-group">
             {% csrf_token %} {{ form }}
         </div>
-            <button type="submit" id="submitAndNext">
-              Submit
-            </button>
+        <div class="col text-center">
+          <button type="submit" id="submitAndNext" class="btn btn-secondary">
+            Submit
+          </button>
+        </div>
+            
         
     </form>
 </div>
