--- a/book/templates/book/book_details.html
+++ b/book/templates/book/book_details.html
@@ -12,9 +12,11 @@
             <div class="form-group">
                 {% csrf_token %} {{ form }}
             </div>
-                <button type="submit" id="submitAndNext">
+            <div class="col text-center">
+                <button type="submit" class="btn btn-secondary">
                     Next
                 </button>
+            </div>
             
         </form>
     </div>
