--- a/book/templates/book/edit_chapter.html
+++ b/book/templates/book/edit_chapter.html
@@ -10,9 +10,12 @@
         <div class="form-group">
             {% csrf_token %} {{ form }}
         </div>
-            <button type="submit" id="submitAndNext">
-              Update
-            </button>
+        <div class="col text-center">
+          <button type="submit" class="btn btn-secondary">
+            Update
+          </button>
+        </div>
+            
         
     </form>
   
