--- a/book/templates/book/delete_book.html
+++ b/book/templates/book/delete_book.html
@@ -3,22 +3,36 @@
 
   <div class="container">
 
-    <br>
-    <div class="card text-center">
-      <h4 class="card-header">Delete {{ chapter.title }} book </h4>
-      <div class="card-body">
-        <form method="post">
-          {% csrf_token %}
-          <h5 class="card-title">Are you sure you want to delete this book and its associated chapters?</h5>
-          <p class="card-text">It will be gone <strong>FOREVER!</strong></p>
-          <button
-            type="submit">
-            Delete book
-          </button>
-        </form>
-      </div>
+
+    <div class="col d-flex justify-content-center">
+      
     </div>
-    <br>
+
+    <div class="container">
+      <div class="row">
+          <div class="col d-flex justify-content-center align-items-center" style="min-height: 65vh;">
+            <div class="card text-center">
+              <h5 class="card-header">Are you sure you want to delete this book and its associated chapters?</h5>
+              <div class="card-body">
+                <form method="post">
+                  {% csrf_token %}
+                  <h5 class="card-title">It will be gone <strong>FOREVER!</strong>!</h5>
+                  <div class="col ">
+                    <button
+                    type="submit" class="btn btn-secondary">
+                    Delete book
+                  </button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+      </div>
+  </div>
+  
+
+    
+  
   
   </div>
 
