--- a/book/templates/book/delete_chapter.html
+++ b/book/templates/book/delete_chapter.html
@@ -2,22 +2,28 @@
 
 <div class="container">
 
-  <br>
-  <div class="card text-center">
-    <h4 class="card-header">Delete {{ chapter.title }} chapter </h4>
-    <div class="card-body">
-      <form method="post">
-        {% csrf_token %}
-        <h5 class="card-title">Are you sure you want to delete this chapter</h5>
-        <p class="card-text">It will be gone <strong>FOREVER</strong></p>
-        <button
-          type="submit">
-          Delete chapter
-        </button>
-      </form>
+  <div class="container">
+    <div class="row">
+        <div class="col d-flex justify-content-center align-items-center" style="min-height: 65vh;">
+          <div class="card text-center">
+            <h5 class="card-header">Are you sure you want to delete this chapter?</h5>
+            <div class="card-body">
+              <form method="post">
+                {% csrf_token %}
+                <h5 class="card-title">It will be gone <strong>FOREVER</strong>!</h5>
+                <div class="col text-center">
+                  <button
+                  type="submit" class="btn btn-secondary">
+                  Delete chapter
+                </button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
     </div>
-  </div>
-  <br>
+</div>
+
 
 </div>
 
