--- a/browse/templates/browse/read_book.html
+++ b/browse/templates/browse/read_book.html
@@ -1,4 +1,23 @@
 {% extends "base.html" %} {% load static %} {% block content %}
 
 
+
+<div class="container-md">
+    <div class="book-container ">
+        <div id="book-content">
+            {% for chapter in chapters %}
+                <div class="chapter text-center" id="chapter-{{ forloop.counter0 }}" >
+                    <h2>{{ chapter.chapter | safe }}</h2>
+                    <p>{{ chapter.content | safe }}</p>
+                </div>
+            {% endfor %}
+        </div>
+        <div class="d-flex justify-content-center mt-3">
+            <button id="prev-chapter" class="btn btn-secondary me-2">Previous Chapter</button>
+            <button id="next-chapter" class="btn btn-secondary ms-2">Next Chapter</button>
+        </div>
+    </div>
+</div>
+
+
 {% endblock content %}
