--- a/browse/templates/browse/read_book.html
+++ b/browse/templates/browse/read_book.html
@@ -4,7 +4,7 @@
 
 <div class="container-md">
     <div class="book-container ">
-        <div id="book-content">
+        <div id="bookContent">
             {% for chapter in chapters %}
                 <div class="chapter text-center" id="chapter-{{ forloop.counter0 }}" >
                     <h2>{{ chapter.chapter | safe }}</h2>
@@ -13,8 +13,8 @@
             {% endfor %}
         </div>
         <div class="d-flex justify-content-center mt-3">
-            <button id="prev-chapter" class="btn btn-secondary me-2">Previous Chapter</button>
-            <button id="next-chapter" class="btn btn-secondary ms-2">Next Chapter</button>
+            <button id="prevChapter" class="btn btn-secondary me-2">Previous Chapter</button>
+            <button id="nextChapter" class="btn btn-secondary ms-2">Next Chapter</button>
         </div>
     </div>
 </div>
