--- a/templates/base.html
+++ b/templates/base.html
@@ -130,6 +130,10 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
       <script src="{% static 'js/script.js' %}"></script>
+     
+
+      <!-- Jquery  -->
+      <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
       <!-- Font Awesome CSS -->
       <script src="https://kit.fontawesome.com/d5e5e3db0c.js" crossorigin="anonymous"></script>
