--- a/browse/templates/browse/book_view.html
+++ b/browse/templates/browse/book_view.html
@@ -12,7 +12,7 @@
             {% if user.is_authenticated %}
             <div class="grid">
                 <div class="g-col-6 g-col-md-4">
-                    <a href="#" class=" btn btn-secondary">Read now</a>
+                    <a href="{% url 'read_book' slug=book_view.slug %}" class=" btn btn-secondary">Read now</a>
             {% if book_view.author == request.user %}
             <a href="{% url 'add_chapter' book_view.slug %}" class="btn btn-secondary">Add a chapter</a>
             <a href="{% url 'edit_book' book_view.slug book_view.pk %}" class="btn btn-secondary">Edit book details</a>
