--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -2,14 +2,11 @@
 {% load static %} 
 {% block content %}
 
-<div class="container-fluid">
+<div class="container-fluid" id="homeContainer">
   {% if messages %}
     {% for message in messages %}
         <div class="alert alert-{{ message.tags }}">
             {{ message }}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
         </div>
     {% endfor %}
   {% endif %}
@@ -24,7 +21,7 @@
               <button type="button" class="btn btn-light"><a href="{% url 'browse' %}">Browse books</a></button>
               <button type="button" class="btn btn-light"><a href="{% url 'book_details' %}">Create a book</a></button>
             {% else %}
-              <button><a href="{% url 'account_signup' %}">Log in </a></button>
+              <button type="button" class="btn btn-light"><a href="{% url 'account_signup' %}">Log in </a></button>
             {% endif %}
       </div>
     </div>
